--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.11.0
   firebase_auth: ^3.3.5
+  google_sign_in: ^5.2.2
+  flutter_facebook_auth: ^4.0.0
 
 dev_dependencies:
   flutter_test:
