--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -24,38 +24,38 @@
 	<array>
 		<dict>
 			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
+			  <string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>com.googleusercontent.apps.825324394142-ino80mvqt1fh2ql8s01ah9r7ru30cunv</string>
+			  <string>com.googleusercontent.apps.825324394142-ino80mvqt1fh2ql8s01ah9r7ru30cunv</string>
 			</array>
 		</dict>
 	</array>
 	<key>FacebookAppID</key>
     <string>448522530146396</string>
     <key>FacebookClientToken</key>
-    <string>1af88537d696e42189a62cb0f79868b7</string>
+    <string>ad0777d3ee289976d1889623231897b6</string>
     <key>FacebookDisplayName</key>
-    <string>더치할래</string>
+    <string>dutchHallae</string>
 
-<key>LSApplicationQueriesSchemes</key>
-<array>
-  <string>fbapi</string>
-  <string>fbapi20130214</string>
-  <string>fbapi20130410</string>
-  <string>fbapi20130702</string>
-  <string>fbapi20131010</string>
-  <string>fbapi20131219</string>
-  <string>fbapi20140410</string>
-  <string>fbapi20140116</string>
-  <string>fbapi20150313</string>
-  <string>fbapi20150629</string>
-  <string>fbapi20160328</string>
-  <string>fbauth</string>
-  <string>fb-messenger-share-api</string>
-  <string>fbauth2</string>
-  <string>fbshareextension</string>
-</array>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+      <string>fbapi</string>
+      <string>fbapi20130214</string>
+      <string>fbapi20130410</string>
+      <string>fbapi20130702</string>
+      <string>fbapi20131010</string>
+      <string>fbapi20131219</string>
+      <string>fbapi20140410</string>
+      <string>fbapi20140116</string>
+      <string>fbapi20150313</string>
+      <string>fbapi20150629</string>
+      <string>fbapi20160328</string>
+      <string>fbauth</string>
+      <string>fb-messenger-share-api</string>
+      <string>fbauth2</string>
+      <string>fbshareextension</string>
+    </array>
 	<key>CFBundleVersion</key>
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
