--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -27,7 +27,8 @@
 			  <string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-			  <string>com.googleusercontent.apps.825324394142-ino80mvqt1fh2ql8s01ah9r7ru30cunv</string>
+			  <string>fb448522530146396</string>
+              <string>com.googleusercontent.apps.825324394142-ino80mvqt1fh2ql8s01ah9r7ru30cunv</string>
 			</array>
 		</dict>
 	</array>
