--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -22,6 +22,17 @@
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
 	<array>
+	    <dict>
+            <key>CFBundleTypeRole</key>
+            <string>Editor</string>
+            <key>CFBundleURLName</key>
+            <string>twittercallback</string>
+            <key>CFBundleURLSchemes</key>
+            <array>
+              <!-- Registered Callback URLs in TwitterApp -->
+              <string>twittercallback</string>
+            </array>
+         </dict>
 		<dict>
 			<key>CFBundleTypeRole</key>
 			  <string>Editor</string>
