--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^3.3.5
   google_sign_in: ^5.2.2
   flutter_facebook_auth: ^4.0.0
+  twitter_login: ^4.0.1
 
 dev_dependencies:
   flutter_test:
