--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   google_sign_in: ^5.2.2
   flutter_facebook_auth: ^4.0.0
   twitter_login: ^4.0.1
+  sign_in_with_apple: ^3.3.0
+  fluttertoast: ^8.0.8
 
 dev_dependencies:
   flutter_test:
