--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   sign_in_with_apple: ^3.3.0
   fluttertoast: ^8.0.8
   font_awesome_flutter: ^9.2.0
+  get: ^4.6.1
+  cloud_firestore: ^3.1.6
+  image_picker: ^0.8.4+4
+  firebase_storage: ^10.2.5
 
 dev_dependencies:
   flutter_test:
