--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   cloud_firestore: ^3.1.6
   image_picker: ^0.8.4+4
   firebase_storage: ^10.2.5
+  flutter_screenutil: ^5.1.1
 
 dev_dependencies:
   flutter_test:
