--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   naver_map_plugin:
     git: https://github.com/LBSTECH/naver_map_plugin.git
   syncfusion_flutter_calendar: ^19.4.54
+  dotted_border: ^2.0.0+2
 
 dev_dependencies:
   flutter_test:
@@ -91,12 +92,14 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: AppleSDGothic
+      fonts:
+        - asset: assets/fonts/AppleSDGothicNeoM.ttf
+        - asset: assets/fonts/AppleSDGothicNeoL.ttf
+          weight: 300
+        - asset: assets/fonts/AppleSDGothicNeoB.ttf
+          weight: 700
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
