--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   dotted_border: ^2.0.0+2
   contacts_service: ^0.6.3
   permission_handler: ^9.2.0
+  modal_bottom_sheet: ^2.0.1
 
 dev_dependencies:
   flutter_test:
