--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   contacts_service: ^0.6.3
   permission_handler: ^9.2.0
   modal_bottom_sheet: ^2.0.1
+  flutter_animated_dialog: ^2.0.1
 
 dev_dependencies:
   flutter_test:
