--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   permission_handler: ^9.2.0
   modal_bottom_sheet: ^2.0.1
   flutter_animated_dialog: ^2.0.1
+  kakao_flutter_sdk_user: ^1.1.1
 
 dev_dependencies:
   flutter_test:
