--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,6 @@ app.*.map.json
 
 # Cloud Functions related
 /functions/service_account.json
+
+# Secret Keys related
+/lib/utilites/secret_keys.dart
