--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,13 +51,14 @@ dependencies:
   flutter_screenutil: ^5.1.1
   naver_map_plugin:
     git: https://github.com/LBSTECH/naver_map_plugin.git
-  syncfusion_flutter_calendar: ^19.4.54
+  syncfusion_flutter_calendar: ^20.1.59
   dotted_border: ^2.0.0+2
   contacts_service: ^0.6.3
   permission_handler: ^9.2.0
   modal_bottom_sheet: ^2.0.1
   flutter_animated_dialog: ^2.0.1
   kakao_flutter_sdk_user: ^1.1.1
+  flutter_colorpicker: ^1.0.3
 
 dev_dependencies:
   flutter_test:
