--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   flutter_colorpicker: ^1.0.3
   intl: ^0.17.0
   mask_text_input_formatter: ^2.3.0
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
