--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,7 @@ dependencies:
   flutter_screenutil: ^5.1.1
   naver_map_plugin:
     git: https://github.com/LBSTECH/naver_map_plugin.git
-  syncfusion_flutter_calendar: ^20.1.59
+  syncfusion_flutter_calendar: ^20.2.38
   dotted_border: ^2.0.0+2
   contacts_service: ^0.6.3
   permission_handler: ^9.2.0
@@ -62,6 +62,8 @@ dependencies:
   intl: ^0.17.0
   mask_text_input_formatter: ^2.3.0
   dio: ^4.0.6
+  syncfusion_flutter_datepicker: ^20.2.38
+  image_cropper: ^2.0.3
 
 dev_dependencies:
   flutter_test:
