--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   dio: ^4.0.6
   syncfusion_flutter_datepicker: ^20.2.38
   image_cropper: ^2.0.3
+  day_night_time_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
